--- a/fly.toml
+++ b/fly.toml
@@ -15,6 +15,20 @@ primary_region = 'lhr'
   auto_start_machines = true
   min_machines_running = 0
   processes = ['app']
+  
+  # Allow long-running requests (job processing can take 10+ minutes)
+  [http_service.concurrency]
+    type = "requests"
+    hard_limit = 25
+    soft_limit = 20
+  
+  # Increase timeout for long-running job searches
+  [[http_service.checks]]
+    grace_period = "30s"
+    interval = "15s"
+    method = "GET"
+    timeout = "10s"
+    path = "/"
 
 [[vm]]
   memory = '1gb'
